--- a/backbone-implementation/index.html
+++ b/backbone-implementation/index.html
@@ -13,6 +13,7 @@
 	<script src="libraries/jquery-1.9.0.js"></script>
 	<script src="libraries/underscore.js"></script>
 	<script src="libraries/backbone.js"></script>
+	<script src="libraries/localStorage.js"></script>
 
 </head>
 
@@ -56,7 +57,9 @@
 	</script>
 
 	<script type="text/template" id="listTemplate">
-		<ul class="noBulletList"> </ul>
+		<ul class="noBulletList"> 
+			<li class="noItemsMsg hiddenToDo"> No TODO items in this filter </li>
+		</ul>
 	</script>
 
 	<script type="text/template" id="editItemTemplate">
